# Framework

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/framework/: Event.h  GraphicsEvents.h  GraphicsSystem.cpp  GraphicsSystem.h  InputSystem.cpp  InputSystem.h  assets.cpp
